# cs200-assignment-7

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix  light.frag  light.vert
src/: Affine.cpp  Affine.h  Camera.cpp  Camera.h  CameraTest.cpp  DPTexturedMesh.cpp  DPTexturedMesh.h  InverseTest.cpp  LightTest.cpp  Mesh.h  MeshRenderDemo.cpp  SolidRender.cpp  SolidRender.h  SolidRenderTest.cpp  SquareMesh.cpp  SquareMesh.h  Texture.cpp  Texture.h  TextureDemo.cpp  TextureRender.cpp  TextureRender.h  TextureRenderTest.cpp  TextureTest.cpp  TexturedMesh.h  cs200opengl_texture_demo.cpp
